tg-281 elimina campos innecesarios de form anamnesis

--- a/front-end/webapp/src/app/modules/internacion/components/alergias/alergias.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/alergias/alergias.component.html
@@ -1,57 +1,18 @@
 <h2 class="mat-h2" [translate]="'internaciones.anamnesis.alergias.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [label]="'internaciones.anamnesis.alergias.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
+		<app-concepts-search [label]="'internaciones.anamnesis.alergias.ALLERGY'" (onSelect)=setConcept($event)>
 		</app-concepts-search>
 
 		<form [formGroup]="form" (ngSubmit)="addToList()">
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.alergias.PROBLEM_TYPE'">
+				<mat-label [translate]="'internaciones.anamnesis.alergias.ALLERGY'">
 				</mat-label>
 				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
 				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
 				</mat-error>
 			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.alergias.form.SEVERITY'">
-				</mat-label>
-				<input matInput type="text" formControlName="severity" name="severity">
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.alergias.form.CATEGORY'">
-				</mat-label>
-				<mat-select formControlName="categoryId" name="categoryId">
-					<mat-option *ngFor="let category of categories" [value]="category.id">
-						{{category.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.alergias.form.CLINICAL_STATUS'">
-				</mat-label>
-				<mat-select formControlName="statusId" name="statusId">
-					<mat-option *ngFor="let status of clinicalStatus" [value]="status.id">
-						{{status.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.alergias.form.VERIFICATION_STATUS'">
-				</mat-label>
-				<mat-select formControlName="verificationId" name="verificationId">
-					<mat-option *ngFor="let verification of verifications" [value]="verification.id">
-						{{verification.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
+
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'internaciones.anamnesis.alergias.form.REGISTRY_DATE'">
 				</mat-label>
@@ -61,18 +22,8 @@
 				<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
 					(monthSelected)="chosenMonthHandler($event)">
 				</mat-datepicker>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
 			</mat-form-field>
 
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.alergias.form.NOTE'"></mat-label>
-				<textarea matInput type="text" id="note" name="note" formControlName="note"
-					placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-					</textarea>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
 			<div align="end">
 				<button mat-raised-button color="primary" type="submit">
 					<span class="uppercase" [translate]="'internaciones.anamnesis.alergias.ADD'"></span>
