--- a/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
@@ -1,39 +1,19 @@
 <h2 class="mat-h2" [translate]="'internaciones.anamnesis.diagnosticos.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [label]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
+		<app-concepts-search [label]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'" (onSelect)=setConcept($event)>
 		</app-concepts-search>
 		<form [formGroup]="form" (ngSubmit)="addToList()">
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'">
+				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
 				</mat-label>
 				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
 				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
 				</mat-error>
 			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.form.CLINICAL_STATUS'">
-				</mat-label>
-				<mat-select formControlName="statusId" name="statusId">
-					<mat-option *ngFor="let status of clinicalStatus" [value]="status.id">
-						{{status.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.form.VERIFICATION_STATUS'">
-				</mat-label>
-				<mat-select formControlName="verificationId" name="verificationId">
-					<mat-option *ngFor="let verification of verifications" [value]="verification.id">
-						{{verification.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
-
+			<mat-checkbox formControlName="presumptive">
+				<span [translate]="'internaciones.anamnesis.diagnosticos.PRESUMPTIVE'"></span>
+			</mat-checkbox>
 			<div align="end">
 				<button class="uppercase" mat-raised-button color="primary" type="submit">
 					<span [translate]="'internaciones.anamnesis.diagnosticos.ADD'"></span>
