--- a/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
@@ -1,25 +1,14 @@
 <h2 class="mat-h2" [translate]="'internaciones.anamnesis.vacunas.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [label]="'internaciones.anamnesis.vacunas.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
+		<app-concepts-search [label]="'internaciones.anamnesis.vacunas.INMUNIZATION'" (onSelect)=setConcept($event)>
 		</app-concepts-search>
 		<form [formGroup]="form" (ngSubmit)="addToList()">
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.vacunas.PROBLEM_TYPE'">
+				<mat-label [translate]="'internaciones.anamnesis.vacunas.INMUNIZATION'">
 				</mat-label>
 				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
 				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.vacunas.form.CLINICAL_STATUS'">
-				</mat-label>
-				<mat-select formControlName="statusId" name="statusId">
-					<mat-option *ngFor="let status of inmunizationStatus" [value]="status.id">
-						{{status.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'">
 				</mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
@@ -31,16 +20,6 @@
 				<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
 					(monthSelected)="chosenMonthHandler($event)">
 				</mat-datepicker>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.vacunas.form.NOTE'"></mat-label>
-				<textarea matInput type="text" id="note" name="note" formControlName="note"
-					placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
-					</textarea>
-				<mat-error [translate]="'forms.REQUIRED'">
-				</mat-error>
 			</mat-form-field>
 			<div align="end">
 				<button class="uppercase" mat-raised-button color="primary" type="submit">
