tg-229 add signos vitales ficha de internacion del paciente

--- a/front-end/webapp/src/app/modules/auth/routes/login/login.component.html
+++ b/front-end/webapp/src/app/modules/auth/routes/login/login.component.html
@@ -32,8 +32,8 @@
 					</mat-form-field>
 				</app-form-input>
 			</mat-card-content>
-			<mat-card-actions>
-				<button mat-button type="submit" [disabled]="!form.valid" translate="auth.login.form.SUBMIT"></button>
+			<mat-card-actions align="end">
+				<button mat-raised-button color="primary" type="submit" [disabled]="!form.valid" translate="auth.login.form.SUBMIT"></button>
 			</mat-card-actions>
 		</mat-card>
 	</form>
