--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -11,6 +11,9 @@
 				<section>
 					<app-patient-card [patient]="patient$ | async"></app-patient-card>
 				</section>
+				<section>
+					<app-signos-vitales-summary></app-signos-vitales-summary>
+				</section>
 			</div>
 			<div class="column">
 				<section>
