--- a/front-end/webapp/src/app/modules/auth/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/auth/routes/profile/profile.component.html
@@ -1,5 +1,5 @@
-<app-content width="narrow">
-	<mat-card class="example-card">
+<app-content width="full">
+	<mat-card>
 		<mat-card-header>
 			<mat-card-title>Mi cuenta</mat-card-title>
 		</mat-card-header>
@@ -9,7 +9,7 @@
 			</p>
 		</mat-card-content>
 		<mat-card-actions>
-			<button mat-button (click)="logout()">CERRAR SESION</button>
+			<button mat-flat-button color="warn" (click)="logout()">CERRAR SESION</button>
 		</mat-card-actions>
 	</mat-card>
 </app-content>
