--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="box">
 	<mat-card-header>
-		<mat-icon>{{ header.matIcon }}</mat-icon>
+		<mat-icon fontSet="material-icons-outlined">{{ header.matIcon }}</mat-icon>
 		<mat-card-title>
 			<span>{{ header.title }}</span>
 		</mat-card-title>
