--- a/front-end/webapp/src/assets/styles/theme.scss
+++ b/front-end/webapp/src/assets/styles/theme.scss
@@ -14,6 +14,7 @@ $theme: mat-light-theme($primary, $accent);
 @include mat-table($theme);
 @include mat-card-box($theme);
 @include signos-vitales-box($theme);
+@include detail-box($theme);
 @include mat-dialog($theme);
 @include mat-button($theme);
 @include no-data($theme);
