--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
@@ -21,7 +21,7 @@
 					margin: 10px 10px 0 0;
 				}
 			}
-			.firma-buttons {
+			.sign-buttons {
 				display: flex;
 				flex-direction: column;
 				button {
