--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.scss
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.scss
@@ -18,4 +18,13 @@
 		@include form-buttons;
 		margin-top: 25px;
 	}
+
+}
+.table-container{
+	.new-patient-button{
+		@include form-buttons;
+		button {
+			margin-right: 0px;
+			}
+	}
 }
